# Movie-by-frame

./: .gitignore  Makefile  README.md  pyproject.toml
data/: classes.txt
notebooks/: CLIP.ipynb  CNN.ipynb  ViT.ipynb  prepare_dataset.ipynb
src/: classes.txt  main.py  model.py  utils.py
