[project]
name = "Movie-by-frame"
version = "0.1.0"
description = "ML/DL project"
authors = [
    {name = "Sergei Vdovenkov", email = "vdovenkov2000@gmail.com"},
    {name = "Elena Miacheva", email = "mmiacheva@gmail.com"},
    {name = "Alexey Krasnov", email = "akrasnov135@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "torch (>=2.5.1,<3.0.0)",
    "pytorch-lightning (>=2.5.0.post0,<3.0.0)",
    "wandb (>=0.19.4,<0.20.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "torchvision (>=0.20.1,<0.21.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "python-telegram-bot (>=21.10,<22.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "ultralytics (>=8.3.77,<9.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "numpy (==1.26.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "timm (>=1.0.15,<2.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
black = "^25.1.0"
ruff = "^0.9.6"

[tool.black]
line-length = 120 
target-version = ['py311']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "C"]